Follwing changes -fixed gap in header when i mobile view

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 0.5em;
+    gap: 0.3em;
     font-size: var(--size-xxs);
 }
 
@@ -57,6 +57,7 @@
 /* xs */
 @media (min-width: 475px) {
     .hero__content {
+        top: 35%;
         gap: 0.8em;
     }
     .hero__content > h4 {
